--- a/04_Ground_Based_Concept.ipynb
+++ b/04_Ground_Based_Concept.ipynb
@@ -305,7 +305,7 @@
     "\\begin{align}\n",
     "\t\\Delta m_{\\rm inst} &\\approx \\left | \\frac{\\partial m_{\\rm inst}}{\\partial n} \\Delta N \\right | \\\\\n",
     "\t\t\t&= \\frac{2.5}{\\log 10} \\frac{\\Delta N}{N} \\\\\n",
-    "\t\t\t&= \\frac{1.0857}{\\sqrt{N}} ~.\n",
+    "\t\t\t&\\approx \\frac{1.0857}{\\sqrt{N}} ~.\n",
     "\\end{align}\n",
     "\n",
     "\n",
@@ -314,31 +314,7 @@
     "* **Question**: What if the sky value is constant but not zero? Can you guess the mathematical form of $\\Delta N$?\n",
     "* **Question**: What if the sky value has average of 0 but has fluctuation (so called standard deviation)? Can you guess the mathematical form of $\\Delta N$?\n",
     "\n",
-    "* **TIP**: Say\n",
-    " * $m_s$: sky (mean, median, mode, or any other representative one) (ADU/pixel), \n",
-    " * $s_s$: sky *sample* standard deviation (electrons/pixel),\n",
-    " * $\\sigma_s$: the *true* sky standard deviatio (electrons/pixel),\n",
-    " * $g$: (effective) electron gain (electrons/ADU),\n",
-    " * $R$: readout noise (electrons/pixel),\n",
-    " * $N_{\\rm tot}$: total count inside the aperture (including sky) (ADU),\n",
-    " * $n_a$: number of pixels used as the aperture (pixel),\n",
-    " * $n_s$: number of pixels used as sky (sky estimation) (pixel)\n",
-    " \n",
-    " (In our case, I assumed $N_{\\rm tot} \\gg m_s$, $\\sigma_s=0$, $g=1$, and $R=0$). \n",
-    " Note that $\\sigma_s$ is calculated *before* we calculate the stellar magnitude. Hence, it should include the uncertainty due to the readout noise! \n",
-    " \n",
-    " Then the magnitude uncertainty is usually calculated as\n",
-    "\n",
-    "\\begin{align}\n",
-    "\t\\Delta m_{\\rm inst} &= 1.0857 \\frac{\\Delta N}{N}\\\\\n",
-    "        &\\approx 1.0857 \\frac{\\sqrt{N_{\\rm tot} g\n",
-    "\t\t\t\t\t\t+ n_a \\sigma_s^2 \n",
-    "\t\t\t\t\t\t+ \\frac{n_a^2 \\sigma_s^2}{n_s} }}\n",
-    "\t\t\t\t{(N_{\\rm tot} - n_s m_s)g} ~,\\\\\n",
-    "\t\\sigma_s^2 &= m_s g + R^2 \\quad({\\rm Poissonian~+~Gaussian})\n",
-    "\\end{align}\n",
-    "\n",
-    " > Proof for $\\Delta N$:\n",
+    "* **TIP**: Check the Appendix A\n",
     "\n",
     "* **TIP**: For a *very accurate* error analysis using CCD, see Merline & Howell 1995 (Experimental Astronomy, **6**, *163*)\n",
     "\n",
