--- a/06_Preprocessing_with_Python.ipynb
+++ b/06_Preprocessing_with_Python.ipynb
@@ -44,35 +44,36 @@
     "\n",
     "On spyder, you can change the Editor and Console windows by hitting \"`ctrl+shift+e`\" and \"`ctrl+shift+i`\". You don't have to turn the terminal on via \"`ctrl+alt+t`\", but just hit \"`ctrl+shift+i`\" and type like this:\n",
     "\n",
-    "    In [1]: mkdir bias\n",
-    "    In [2]: mv *b.fits bias/\n",
-    "    In [3]: cd bias/\n",
-    "    In [4]: ls *.fits > bias.list\n",
-    "    In [5]: cd ..\n",
-    "    \n",
-    "    In [6]: mkdir dark\n",
-    "    In [7]: mv *d.fits dark/\n",
-    "    In [8]: cd dark/\n",
-    "    In [9]: ls *.fits > dark.list\n",
-    "    In [10]: cd ..\n",
-    "    \n",
-    "    In [11]: mkdir flat\n",
-    "    In [12]: mv *f.fits flat/\n",
-    "    In [13]: cd flat/\n",
-    "    In [14]: ls *.fits > flat.list\n",
-    "    In [15]: cd ..\n",
-    "    \n",
-    "    In [16]: mkdir object\n",
-    "    In [17]: mv *.fits object/\n",
-    "    In [18]: cd object/\n",
-    "    In [19]: ls *.fits > object.list\n",
-    "    In [20]: cat object.list\n",
-    "        0001.fits\n",
-    "        ....\n",
-    "        0010.fits\n",
-    "    # You can do \"cat bias.list\" to see the contents in \"bias.list\"\n",
-    "    # See the figure included below.\n",
-    "    \n",
+    "```ipython\n",
+    "In [1]: mkdir bias\n",
+    "In [2]: mv *b.fits bias/\n",
+    "In [3]: cd bias/\n",
+    "In [4]: ls *.fits > bias.list\n",
+    "In [5]: cd ..\n",
+    "\n",
+    "In [6]: mkdir dark\n",
+    "In [7]: mv *d.fits dark/\n",
+    "In [8]: cd dark/\n",
+    "In [9]: ls *.fits > dark.list\n",
+    "In [10]: cd ..\n",
+    "\n",
+    "In [11]: mkdir flat\n",
+    "In [12]: mv *f.fits flat/\n",
+    "In [13]: cd flat/\n",
+    "In [14]: ls *.fits > flat.list\n",
+    "In [15]: cd ..\n",
+    "\n",
+    "In [16]: mkdir object\n",
+    "In [17]: mv *.fits object/\n",
+    "In [18]: cd object/\n",
+    "In [19]: ls *.fits > object.list\n",
+    "In [20]: cat object.list\n",
+    "    0001.fits\n",
+    "    ....\n",
+    "    0010.fits\n",
+    "# You can do \"cat bias.list\" to see the contents in \"bias.list\"\n",
+    "# See the figure included below.\n",
+    "```\n",
     "        \n",
     "Then you have a file '`bias.list`' in the directory '`bias`', with all the 10 bias images, etc. A part of an example:\n",
     "\n",
@@ -115,7 +116,7 @@
     "bias = combine(filelist.tolist(),       # ccdproc does not accept numpy.ndarray, but only python list.\n",
     "               output_file='bias.fits', # I want to save the combined image\n",
     "               method='median',         # default is average so I specified median.\n",
-    "               unit='adu')              # unit is required: it's ADU in our case.\n"
+    "               unit='adu')              # unit is required: it's ADU in our case."
    ]
   },
   {
