update App A sky estimation

--- a/App_A_Photometric_Errors.ipynb
+++ b/App_A_Photometric_Errors.ipynb
@@ -104,6 +104,8 @@
     "Depending on softwares, different mode or mean estimation methods are used to infer $\\mu_s$. Mode estimation is especially useful for crowded field photometry, and mean estimation is useful for non-crowded field since it's better in mathematical sense.\n",
     "\n",
     "\n",
+    "For this sky estimation, we need no Poissonian or readout noise term, since they are all included in $s_s$. The sky sample distribution we see from CCD is actually the true sky passed through such Poissonian noise and readout noise at each pixel. *The TA wants to thank H. Cho for his kind correction*.\n",
+    "\n",
     "-----"
    ]
   },
