--- a/App_A_Photometric_Errors.ipynb
+++ b/App_A_Photometric_Errors.ipynb
@@ -32,10 +32,11 @@
     "\n",
     "First, in mathematical sense, the conclusion is that the true mean value of sky has expectation value of the sample mean of the sky pixels, and the uncertainty of it is calculated by Student-t distribution. In mathematical term, it is written as \n",
     "\n",
-    "\\begin{align}\n",
-    "\t\\frac{m_s - \\mu_s}{s_s/\\sqrt{n_s}} &\\sim T_{n_s-1} \\\\\n",
-    "    \\mu_s &= m_s \\pm t^{\\alpha}_{n_s-1} \\frac{s_s}{\\sqrt{n_s}}\n",
-    "\\end{align}\n",
+    "$$ \\frac{m_s - \\mu_s}{s_s/\\sqrt{n_s}} \\sim T_{n_s-1}$$ \n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$ \\mu_s = m_s \\pm t^{\\alpha}_{n_s-1} \\frac{s_s}{\\sqrt{n_s}} $$\n",
     "\n",
     "$m_s$ and $\\mu_s$ are the sample mean and true mean of sky, $s_s$ is the sample standard deviation of sky, $n_s$ is the number of sky pixels used for calculating $m_s$ and $s_s$, and $t^{\\alpha}_{n_s-1}$ is the $t$ value above which the cdf of T-distribution with dof $n_s-1$ is $\\alpha$. The $t$-value table is calculable by softwares, and some critical values are given at many web sites such as [here](http://math.tutorvista.com/statistics/t-distribution-table.html). If $n_s \\rightarrow \\infty$ (practically if larger than roughly about 30), the t-distribution is well approximated by Gaussian (normal) distribution.\n",
     "\n",
@@ -48,29 +49,21 @@
     "The frequency plot (histogram) of sky values will be somewhat irregular in its shape some times. But in mathematical sense, we have a good theorem called the **central limit theorem (CLT)**:\n",
     "\n",
     "> Say [i.i.d.](https://en.wikipedia.org/wiki/Independent_and_identically_distributed_random_variables) random variable $X \\sim G(\\mu, \\sigma)$ ($X$ follows an unknown general probability distribution with true mean $\\mu$ and true stdev $\\sigma$). If we draw $n (\\gg 1)$ samples, the sample mean will represent the true mean. More rigorously, the sample mean ($\\bar{X}$) will approximately follow a Gaussian distribution:   \n",
-    "\\begin{equation}\n",
-    "\t\\bar{X} \\dot{\\sim} \\mathcal{N}(\\mu, ( \\sigma/\\sqrt{n})^2)\n",
-    "\\end{equation}\n",
+    "$$ \\bar{X} \\dot{\\sim} \\mathcal{N}(\\mu, ( \\sigma/\\sqrt{n})^2)$$\n",
     "\n",
     "In our sky estimation, this means that if we take the sample mean of the pixel values from the sky annulus ($m_s$), it will be similar to the true sky mean ($\\mu_s$), with uncertainty of true sky stdev divided by the sqrt of sky pixels ($\\sigma_s/\\sqrt{n_s}$):\n",
     "\n",
-    "\\begin{equation}\n",
-    "\t\\mu_s \\approx m_s \\pm \\frac{\\sigma_s}{\\sqrt{n_s}}\n",
-    "\\end{equation}\n",
+    "$$ \\mu_s \\approx m_s \\pm \\frac{\\sigma_s}{\\sqrt{n_s}} $$\n",
     "\n",
     "This is true only when we have many sky pixels ($n_s \\gg 1$). But how do we know the *true* sky stdev? We have another useful theorem which says we can assume $\\sigma_s \\approx s_s$, where $s_s$ is the *sample* sky stdev:\n",
     "\n",
     "> For the same situation as CLT, the sample stdev ($ s^2 := \\sum_i (X_i - \\bar{X})^2 / (n-1) $) and the true stdev has following property:\n",
-    "\\begin{equation}\n",
-    "\t\\frac{(n-1) s^2}{\\sigma^2} \\sim \\chi^2_{n-1}\n",
-    "\\end{equation}\n",
+    "$$ \\frac{(n-1) s^2}{\\sigma^2} \\sim \\chi^2_{n-1} $$\n",
     "In other words, $(n-1) s^2/\\sigma^2$ follows a chi-square distribution with dof $(n-1)$. From the definition of chi-square distribution, one can calculate that the expected value of $s$ is $\\sigma$. \n",
     "\n",
     "So we have\n",
     "\n",
-    "\\begin{equation}\n",
-    "\t\\mu_s \\approx m_s \\pm \\frac{s_s}{\\sqrt{n_s}}\n",
-    "\\end{equation}\n",
+    "$$ \\mu_s \\approx m_s \\pm \\frac{s_s}{\\sqrt{n_s}} $$\n",
     "\n",
     "It resembles the mathematical conclusion! This is when the t-value is 1, i.e., 1-sigma uncertainty.\n",
     "\n"
@@ -95,9 +88,7 @@
     "\n",
     "Although we need to use the Student-t distribution to be rigorous, astronomers are satisfied with only the 1-sigma range, i.e., \n",
     "\n",
-    "\\begin{equation}\n",
-    "\t\\mu_s \\approx m_s \\pm \\frac{s_s}{\\sqrt{n_s}}~.\n",
-    "\\end{equation}\n",
+    "$$ \\mu_s \\approx m_s \\pm \\frac{s_s}{\\sqrt{n_s}}~. $$\n",
     "\n",
     "This will suffice many of the astronomers without the explanation of t-distribution. This is because we have sky pixels of hundreds, and the t-distribution will be approximately Gaussian, so the uncertainty term in the equation can be roughly understood as the stdev of Gaussian distribution. \n",
     "\n",
