--- a/07_Cosmic_Ray_Rejection.ipynb
+++ b/07_Cosmic_Ray_Rejection.ipynb
@@ -57,7 +57,164 @@
     "\n",
     "For object images, however, all object images may not be identical, so we don't do median combine. That's why we need CR rejection to object images. **You can do CR rejection either before or after preprocessing** (I currently have no firm idea when is the best time to do this, so your opinion is welcomed). It's very simple to do such rejection: import and use.\n",
     "\n",
-    "Since the `astroscrappy` has default settings different from classic `L.A.Cosmic`, `ccdproc` has a function which does the classic `L.A.cosmic` by using `astroscrappy`."
+    "Since the `astroscrappy` has default settings different from classic `L.A.Cosmic`, `ccdproc` has a function which does the classic `L.A.cosmic` by using `astroscrappy`.\n",
+    "\n",
+    "There is no online manual of `astroscrappy`, but you can print it out in Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "detect_cosmics(indat, inmask=None, sigclip=4.5, sigfrac=0.3, objlim=5.0,\n",
+      "                      gain=1.0, readnoise=6.5, satlevel=65536.0, pssl=0.0,\n",
+      "                      niter=4, sepmed=True, cleantype='meanmask',\n",
+      "                      fsmode='median', psfmodel='gauss', psffwhm=2.5,\n",
+      "                      psfsize=7, psfk=None, psfbeta=4.765, verbose=False)\n",
+      "\n",
+      "    Detect cosmic rays in a numpy array.\n",
+      "\n",
+      "    If you use this code, please add this repository address in a footnote:\n",
+      "    https://github.com/astropy/astroscrappy\n",
+      "\n",
+      "    Please cite the original paper which can be found at:\n",
+      "    http://www.astro.yale.edu/dokkum/lacosmic/\n",
+      "\n",
+      "    van Dokkum 2001, PASP, 113, 789, 1420\n",
+      "    (article : http://adsabs.harvard.edu/abs/2001PASP..113.1420V)\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    indat : float numpy array\n",
+      "        Input data array that will be used for cosmic ray detection.\n",
+      "\n",
+      "    inmask : boolean numpy array, optional\n",
+      "        Input bad pixel mask. Values of True will be ignored in the cosmic ray\n",
+      "        detection/cleaning process. Default: None.\n",
+      "\n",
+      "    sigclip : float, optional\n",
+      "        Laplacian-to-noise limit for cosmic ray detection. Lower values will\n",
+      "        flag more pixels as cosmic rays. Default: 4.5.\n",
+      "\n",
+      "    sigfrac : float, optional\n",
+      "        Fractional detection limit for neighboring pixels. For cosmic ray\n",
+      "        neighbor pixels, a lapacian-to-noise detection limit of\n",
+      "        sigfrac * sigclip will be used. Default: 0.3.\n",
+      "\n",
+      "    objlim : float, optional\n",
+      "        Minimum contrast between Laplacian image and the fine structure image.\n",
+      "        Increase this value if cores of bright stars are flagged as cosmic\n",
+      "        rays. Default: 5.0.\n",
+      "\n",
+      "    pssl : float, optional\n",
+      "        Previously subtracted sky level in ADU. We always need to work in\n",
+      "        electrons for cosmic ray detection, so we need to know the sky level\n",
+      "        that has been subtracted so we can add it back in. Default: 0.0.\n",
+      "\n",
+      "    gain : float, optional\n",
+      "        Gain of the image (electrons / ADU). We always need to work in\n",
+      "        electrons for cosmic ray detection. Default: 1.0\n",
+      "\n",
+      "    readnoise : float, optional\n",
+      "        Read noise of the image (electrons). Used to generate the noise model\n",
+      "        of the image. Default: 6.5.\n",
+      "\n",
+      "    satlevel : float, optional\n",
+      "        Saturation of level of the image (electrons). This value is used to\n",
+      "        detect saturated stars and pixels at or above this level are added to\n",
+      "        the mask. Default: 65536.0.\n",
+      "\n",
+      "    niter : int, optional\n",
+      "        Number of iterations of the LA Cosmic algorithm to perform. Default: 4.\n",
+      "\n",
+      "    sepmed : boolean, optional\n",
+      "        Use the separable median filter instead of the full median filter.\n",
+      "        The separable median is not identical to the full median filter, but\n",
+      "        they are approximately the same and the separable median filter is\n",
+      "        significantly faster and still detects cosmic rays well. Default: True\n",
+      "\n",
+      "    cleantype : {'median', 'medmask', 'meanmask', 'idw'}, optional\n",
+      "        Set which clean algorithm is used:\n",
+      "\n",
+      "        'median': An umasked 5x5 median filter\n",
+      "\n",
+      "        'medmask': A masked 5x5 median filter\n",
+      "\n",
+      "        'meanmask': A masked 5x5 mean filter\n",
+      "\n",
+      "        'idw': A masked 5x5 inverse distance weighted interpolation\n",
+      "\n",
+      "        Default: \"meanmask\".\n",
+      "\n",
+      "    fsmode : {'median', 'convolve'}, optional\n",
+      "        Method to build the fine structure image:\n",
+      "\n",
+      "        'median': Use the median filter in the standard LA Cosmic algorithm\n",
+      "        'convolve': Convolve the image with the psf kernel to calculate the\n",
+      "        fine structure image.\n",
+      "        Default: 'median'.\n",
+      "\n",
+      "    psfmodel : {'gauss', 'gaussx', 'gaussy', 'moffat'}, optional\n",
+      "        Model to use to generate the psf kernel if fsmode == 'convolve' and\n",
+      "        psfk is None. The current choices are Gaussian and Moffat profiles.\n",
+      "        'gauss' and 'moffat' produce circular PSF kernels. The 'gaussx' and\n",
+      "        'gaussy' produce Gaussian kernels in the x and y directions\n",
+      "        respectively. Default: \"gauss\".\n",
+      "\n",
+      "    psffwhm : float, optional\n",
+      "        Full Width Half Maximum of the PSF to use to generate the kernel.\n",
+      "        Default: 2.5.\n",
+      "\n",
+      "    psfsize : int, optional\n",
+      "        Size of the kernel to calculate. Returned kernel will have size\n",
+      "        psfsize x psfsize. psfsize should be odd. Default: 7.\n",
+      "\n",
+      "    psfk : float numpy array, optional\n",
+      "        PSF kernel array to use for the fine structure image if\n",
+      "        fsmode == 'convolve'. If None and fsmode == 'convolve', we calculate\n",
+      "        the psf kernel using 'psfmodel'. Default: None.\n",
+      "\n",
+      "    psfbeta : float, optional\n",
+      "        Moffat beta parameter. Only used if fsmode=='convolve' and\n",
+      "        psfmodel=='moffat'. Default: 4.765.\n",
+      "\n",
+      "    verbose : boolean, optional\n",
+      "        Print to the screen or not. Default: False.\n",
+      "\n",
+      "    Returns\n",
+      "    -------\n",
+      "    crmask : boolean numpy array\n",
+      "        The cosmic ray mask (boolean) array with values of True where there are\n",
+      "        cosmic ray detections.\n",
+      "\n",
+      "    cleanarr : float numpy array\n",
+      "        The cleaned data array.\n",
+      "\n",
+      "    Notes\n",
+      "    -----\n",
+      "    To reproduce the most similar behavior to the original LA Cosmic\n",
+      "    (written in IRAF), set  inmask = None, satlevel = np.inf, sepmed=False,\n",
+      "    cleantype='medmask', and fsmode='median'.\n",
+      "\n",
+      "    The original IRAF version distinguishes between spectroscopic and imaging\n",
+      "    data. This version does not. After sky subtracting the spectroscopic data,\n",
+      "    this version will work well. The 1-d 'gaussx' and 'gaussy' values for\n",
+      "    psfmodel can also be used for spectroscopic data (and may even alleviate\n",
+      "    the need to do sky subtraction, but this still requires more testing).\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "import astroscrappy\n",
+    "print(astroscrappy.detect_cosmics.__doc__)"
    ]
   },
   {
@@ -68,19 +225,25 @@
    },
    "outputs": [],
    "source": [
-    "# UNDER CONSTRUCTION\n",
-    "\n",
     "import astroscrappy\n",
     "\n",
-    "for objname in filelist:\n",
-    "    obj = CCDData.read(objname, unit='adu')\n",
-    "    obj_LA = ccdproc.cosmicray_lacosmic(obj)    # classic LAcosmic\n",
-    "    obj_LA.write('LA_'+objname, overwrite=True)  \n",
-    "    obj_cr = astroscrappy(obj)      # astroscrappy-like\n",
-    "    obj_cr.write('cr_'+objname, overwrite=True)\n",
-    "    \n",
-    "    \n",
-    "    "
+    "obj = CCDData.read('HST_Tutorial/Pluto.fits', unit='adu')\n",
+    "obj_LA = obj.copy()\n",
+    "obj_cr = obj.copy()\n",
+    "# Following should give identical result to IRAF L.A.Cosmic,\n",
+    "# where \"m_LA\" is the mask image\n",
+    "m_LA, obj_LA.data = astroscrappy.detect_cosmics(obj.data,\n",
+    "                                                inmask=None,\n",
+    "                                                satlevel=np.inf,\n",
+    "                                                sepmed=False,\n",
+    "                                                cleantype='medmask',\n",
+    "                                                fsmode='median')\n",
+    "obj_LA.write('LA_'+objname)  \n",
+    "\n",
+    "# Following is the \"fastest\" version. The author argues that this\n",
+    "# method gave comparable result as default L.A.Cosmic, but 100 times faster\n",
+    "m_cr, obj_cr.data = astroscrappy.detect_cosmics(obj.data)\n",
+    "obj_cr.write('cr_'+objname, overwrite=True)\n"
    ]
   },
   {
