--- a/App_B_Using_Astropy_for_FITS.ipynb
+++ b/App_B_Using_Astropy_for_FITS.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -156,23 +156,29 @@
     "from ccdproc import CCDData, trim_image\n",
     "import numpy as np\n",
     "\n",
-    "data = CCDData(data=hdul[1].data, unit='adu')\n",
+    "data = CCDData(data = hdul[1].data, \n",
+    "               header=hdul[0].header+hdul[1].header, \n",
+    "               unit='adu')\n",
     "\n",
     "# FITS-style:\n",
     "data1 = trim_image(data, fits_section='[1:200, 1:100]')\n",
+    "\n",
     "# python-style:\n",
     "data2 = trim_image(data[:100, :200])\n",
     "# 0:100 means 0 to 99 in Python, so that the total number is same as fits (100 pixels)\n",
     "\n",
     "print(np.sum(data1.subtract(data2)) == 0)\n",
-    "# This will be `True` if data1 and data2 are the same\n"
+    "\n",
+    "# data2.write('test.fits', overwrite=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In other words, you can freely choose Python convention or FITS convention for trimming the image. The above example returns the results `data1` and `data2` as `CCDData` format. "
+    "Why did I use `header=hdul[0].header+hdul[1].header`? That is because `hdul[0]` contains the **common** header information, so if I skip this part, the header from `hdul[1]` is not perfect. If you try to use only `hdul[1].header`, you may get an error, or the output file (`test.fits`) may not contain any wcs information.\n",
+    "\n",
+    "Also by using `fits_section`, you can freely choose Python convention or FITS convention for trimming the image. The above example returns the results `data1` and `data2` as `CCDData` format. But in this case, "
    ]
   }
  ],
