--- a/App_B_Using_Astropy_for_FITS.ipynb
+++ b/App_B_Using_Astropy_for_FITS.ipynb
@@ -176,9 +176,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why did I use `header=hdul[0].header+hdul[1].header`? That is because `hdul[0]` contains the **common** header information, so if I skip this part, the header from `hdul[1]` is not perfect. If you try to use only `hdul[1].header`, you may get an error, or the output file (`test.fits`) may not contain any wcs information.\n",
+    "Why did I use `header = hdul[0].header + hdul[1].header` ? That is because `hdul[0]` contains the **common** header information, so if I skip this part, the header from `hdul[1]` is not perfect. If you try to use only `hdul[1].header`, you may get an error, or the output file (`test.fits`) may not contain any wcs information.\n",
     "\n",
-    "Also by using `fits_section`, you can freely choose Python convention or FITS convention for trimming the image. The above example returns the results `data1` and `data2` as `CCDData` format. But in this case, "
+    "Also by using `fits_section`, you can freely choose Python convention or FITS convention for trimming the image. "
    ]
   }
  ],
