--- a/App_B_Using_Astropy_for_FITS.ipynb
+++ b/App_B_Using_Astropy_for_FITS.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from astropy.io import fits\n",
     "\n",
-    "hdul = fits.open('HST_Tutorial/Pluto.fits')\n",
+    "hdul = fits.open('HST_Tutorial/Pluto1.fits')\n",
     "# hdul = HDU List = Header Data Unit List\n",
     "\n",
     "print(type(hdul))\n",
