--- a/08_Photutils_StarFinder.ipynb
+++ b/08_Photutils_StarFinder.ipynb
@@ -151,9 +151,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from photutils import DAOStarFinder\n",
-    "from photutils import aperture_photometry\n",
     "from photutils import CircularAperture as CircAp\n",
-    "from photutils import CircularAnnulus  as CircAn\n",
     "\n",
     "find   = DAOStarFinder(fwhm=FWHM, threshold=thresh,\n",
     "                      sharplo=0.2, sharphi=1.0,  # default values \n",
@@ -173,15 +171,19 @@
     "# Save apertures as circular, 4 pixel radius, at each (X, Y)\n",
     "apert = CircAp(coord, r=4.)  \n",
     "\n",
-    "# Do aperture photometry: get summed count in aperture\n",
-    "photo = aperture_photometry(img, apert) \n",
-    "\n",
     "# Draw image and overplot apertures:\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(img, vmax=0.10)\n",
     "apert.plot(color='red', lw=2., alpha=0.7)\n",
     "plt.colorbar()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now have the X, Y coordinates of the detected stars. If you are unfamiliat with the astropy table object, you can save the coordinates in numpy format by `imgXY = np.array(coord)`, so that `imgXY[0]` and `[1]` contains all X and Y coordinates, respectively. You may want to do `X, Y = np.array(coord)` to make two d"
    ]
   }
  ],
