--- a/08_Photutils_StarFinder.ipynb
+++ b/08_Photutils_StarFinder.ipynb
@@ -183,7 +183,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now have the X, Y coordinates of the detected stars. If you are unfamiliat with the astropy table object, you can save the coordinates in numpy format by `imgXY = np.array(coord)`, so that `imgXY[0]` and `[1]` contains all X and Y coordinates, respectively. You may want to do `X, Y = np.array(coord)` to make two d"
+    "We now have the X, Y coordinates of the detected stars. If you are unfamiliat with the astropy table object, you can save the coordinates in numpy format by `imgXY = np.array(coord)`, so that `imgXY[0]` and `[1]` contains all X and Y coordinates, respectively. You may want to do `X, Y = np.array(coord)` to make two different arrays which contain X and Y coordinates only.\n",
+    "\n",
+    "These position information can be input to future aperture photometry routine."
    ]
   }
  ],
