--- a/04_Ground_Based_Concept.ipynb
+++ b/04_Ground_Based_Concept.ipynb
@@ -30,11 +30,13 @@
     "## 1. Seeing\n",
     "\n",
     "\n",
-    "Seeing is one of the critical problems. You may refer to [Here](http://astro.snu.ac.kr/~jskang/seeing/seeing.html) and grasp the meaning of seeing. In this section, we ignore the instrumental seeing, which usually is a low-frequency component.\n",
+    "Seeing is one of the critical problems. You may refer to [here](https://drive.google.com/open?id=0B-MLFRYnMxUvWTNiZjhaZHA1cnM) and grasp the meaning of seeing. In this section, I will ignore the instrumental seeing, which usually is a low-frequency component.\n",
     "\n",
     "Because of the atmospheric seeing, the point source is smoothed from its own \"point\". The function which describes this spreadness is called the **point spread function**, or just **psf**.\n",
     "\n",
-    "There are two most widely used psfs: [Gaussian](https://en.wikipedia.org/wiki/Gaussian_function) and [Moffat](https://en.wikipedia.org/wiki/Moffat_distribution). The first suggestion of using Moffat profile was made in 1969 by A. F. J. Moffat in [this paper](http://adsabs.harvard.edu/cgi-bin/bib_query?bibcode=1969A%26A.....3..455M&db_key=AST) (Astronomy and Astrophysics, Vol. 3, p. 455 (1969)). One that is very widely used in astronomy is the FWHM (full width at half-maximum). This is the distance between the two points which have the value $\\frac{1}{2} f_{\\rm max}$. The profiles of two psfs and their FWHMs are described below:"
+    "There are two most widely used analytic psfs: [Gaussian](https://en.wikipedia.org/wiki/Gaussian_function) and [Moffat](https://en.wikipedia.org/wiki/Moffat_distribution). The first suggestion of using Moffat profile was made in 1969 by A. F. J. Moffat in [this paper](http://adsabs.harvard.edu/cgi-bin/bib_query?bibcode=1969A%26A.....3..455M&db_key=AST) (Astronomy and Astrophysics, Vol. 3, p. 455 (1969)). \n",
+    "\n",
+    "Among parameters for psfs, one that is very widely used in astronomy is the FWHM (full width at half-maximum). FWHM is defined as the distance between the two points which have the value $\\frac{1}{2} f_{\\rm max}$. FWHM is also used for Lorenzian profile, which has infinite standard deviation (the second centered moment diverges, so the standard deviation is not defined, but FWHM can). The profiles of two psfs and their FWHMs are described below:"
    ]
   },
   {
@@ -167,6 +169,7 @@
     "\n",
     "* **Question**: Why do you think I let the abscissa to be in a logarithmic scale? Can you guess what the $\\log_{10}$ of stellar profile means?\n",
     "\n",
+    "* **TIP**: The reason I normalized psfs is that I wanted to simulate the psf of the \n",
     "-----"
    ]
   },
