--- a/04_Ground_Based_Concept.ipynb
+++ b/04_Ground_Based_Concept.ipynb
@@ -169,7 +169,7 @@
     "\n",
     "* **Question**: Why do you think I let the abscissa to be in a logarithmic scale? Can you guess what the $\\log_{10}$ of stellar profile means?\n",
     "\n",
-    "* **TIP**: The reason I normalized psfs is that I wanted to simulate the psf of the \n",
+    "* **TIP**: The reason I normalized psfs is that I wanted to simulate the psf of the same star with different atmospheric condition. The total flux of the star should be constant, but the psf changes due to the seeing.\n",
     "-----"
    ]
   },
