--- a/12_Photutils_Extended_Sources.ipynb
+++ b/12_Photutils_Extended_Sources.ipynb
@@ -613,8 +613,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this plot, I did not take the error into account. In your real work, you MUST take the error sources "
+    "In this plot, I did not take the error into account. In your real work, you MUST take the error sources. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
